Add updating parameter value in save file