@@ -7,6 +7,12 @@ import org.w3c.dom.NodeList;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.transform.Result;
+import javax.xml.transform.Source;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
 import java.io.File;
 
 /**
@@ -19,38 +25,54 @@ public class Save
 
     public Save() {}
 
-    public Save(String path) throws Exception
+    public Save(String path)
     {
         pathToFile = path;
         xmlDocument = getXMLDocument();
     }
 
-    private Document getXMLDocument() throws Exception
+    private Document getXMLDocument()
     {
+        Document document = null;
         try
         {
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
             factory.setValidating(false);
             DocumentBuilder builder = factory.newDocumentBuilder();
 
-            return builder.parse(new File(pathToFile));
+            document = builder.parse(new File(pathToFile));
         } catch (Exception exception) {
-            String message = "XML parsing error!";
-            throw new Exception(message);
+            System.err.print("XML parsing error!");
         }
+
+        return document;
+    }
+
+    public boolean isValid()
+    {
+        boolean valid = true;
+        if (xmlDocument == null)
+        {
+            valid = false;
+        }
+        return valid;
     }
 
     //TODO refactoring
     public Integer getIntegerValue(String parameterName)
     {
         Node node = findNode(parameterName);
-        String type = getAttributeValue(node, Attribute.TYPE);
-
         Integer parameterValue = null;
-        if (type.equals(ParameterType.INTEGER))
+
+        if(node != null)
         {
-            String value = getAttributeValue(node, Attribute.VALUE);
-            parameterValue = new Integer(value);
+            String type = getAttributeValue(node, Attribute.TYPE);
+
+            if (type.equals(ParameterType.INTEGER))
+            {
+                String value = getAttributeValue(node, Attribute.VALUE);
+                parameterValue = Integer.valueOf(value);
+            }
         }
 
         return parameterValue;
@@ -59,16 +81,33 @@ public class Save
     public Boolean getBooleanValue(String parameterName)
     {
         Node node = findNode(parameterName);
-        String type = getAttributeValue(node, Attribute.TYPE);
-
         Boolean parameterValue = null;
-        if (type.equals(ParameterType.BOOLEAN))
-        {
-            String value = getAttributeValue(node, Attribute.VALUE);
-            parameterValue = Boolean.valueOf(value);
-        }
 
+        if (node != null)
+        {
+            String type = getAttributeValue(node, Attribute.TYPE);
+
+            if (type.equals(ParameterType.BOOLEAN))
+            {
+                String value = getAttributeValue(node, Attribute.VALUE);
+                parameterValue = Boolean.valueOf(value);
+            }
+        }
         return parameterValue;
+    }
+
+    public void setParameterValue(String parameterName, Object newValue)
+    {
+        Node node = findNode(parameterName);
+
+        if (node != null)
+        {
+            String stringValue = newValue.toString();
+            Node attribute = getAttribute(node, Attribute.VALUE);
+            attribute.setNodeValue(stringValue);
+
+            saveDocument();
+        }
     }
 
     private Node findNode(String parameterName)
@@ -98,9 +137,7 @@ public class Save
 
     private String getAttributeValue(Node node, String attributeName)
     {
-        NamedNodeMap attributes = node.getAttributes();
-        Node attribute = attributes.getNamedItem(attributeName);
-
+        Node attribute = getAttribute(node, attributeName);
         String value = null;
         if (attribute != null)
         {
@@ -108,6 +145,34 @@ public class Save
         }
 
         return value;
+    }
+
+    private Node getAttribute(Node node, String attributeName)
+    {
+        NamedNodeMap attributes = node.getAttributes();
+        Node attribute = null;
+        if (attributes != null)
+        {
+            attribute = attributes.getNamedItem(attributeName);
+        }
+
+        return attribute;
+    }
+
+    private void saveDocument()
+    {
+        try
+        {
+            Transformer transformer = TransformerFactory.newInstance().newTransformer();
+            Result output = new StreamResult(new File(pathToFile));
+            Source input = new DOMSource(xmlDocument);
+
+            transformer.transform(input, output);
+        }
+        catch (Exception exception)
+        {
+            System.err.print("XML save error!");
+        }
     }
 
     public final class ParameterType
